@@ -1,7 +1,7 @@
 
 name:                ConnectX
 
-version:             1.6.0
+version:             1.7.0
 
 homepage:            https://gitlab.cecs.anu.edu.au/comp1100/ass03
 
