@@ -24,9 +24,14 @@
     
 2017-10-03  v1.5.0  Steven X. Han   <steven.han@anu.edu.au>
 
-    * Fix game winning detection
+    * Fix game winning detection in diagonals
     
 2017-10-03  v1.6.0  Steven X. Han   <steven.han@anu.edu.au>
 
     * Fix scoring system
     * Add additional safety check in pipeline
+    
+2017-10-03  v1.7.0  Steven X. Han   <steven.han@anu.edu.au>
+
+    * Fix game winning detection in rows
+    * Fix problem of only being able to enter a single character
